--- a/Ex. Paulo-LVL 3/style.css
+++ b/Ex. Paulo-LVL 3/style.css
@@ -33,3 +33,22 @@ legend{
 .bloco_comments{
     padding: 10px;
 }
+
+#btn_1{
+    margin: 25px 7px 35px 0;
+    padding: 5px;
+    display: inline-flex;
+    justify-content: center;
+}
+
+#btn_2{
+    margin: 25px 0 35px 7px;
+    padding: 5px;
+    display: inline-flex;
+    justify-content: center;
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+}
